[project]
name        = "3DCV2023"
version     = "0.0.1-2023"
description = "3D Computer Vision at HFU"
readme      = "README.md"
authors     = [
  { name = "Uwe Hahne", email = "uwe.hahne@hs-furtwangen.de" }
]
keywords    = ["opencv", "computer", "vision"]
requires-python = ">=3.9.0"
dependencies    = [
  "black==22.10.0",
  "contourpy==1.0.7",
  "cycler==0.11.0",
  "fonttools==4.39.4",
  "kiwisolver==1.4.4",
  "matplotlib==3.7.1",
  "numpy==1.24.3",
  "opencv-python==4.7.0.72",
  "packaging==23.1",
  "Pillow==9.5.0",
  "pycodestyle==2.9.1",
  "pyparsing==3.0.9",
  "PyQt5==5.15.9",
  "PyQt5-Qt5==5.15.2",
  "PyQt5-sip==12.12.1",
  "python-dateutil==2.8.2",
  "six==1.16.0",
  "tomli==2.0.1"
]

[tool.black]
line-length = 120
